typescript/checker/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement6.ts.stderr
error: Expected one variable binding
 --> $DIR/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement6.ts:2:17
  |
2 | for (var a = 1, b = 2 of X) {
  |                 ^

error: UndefinedSymbol {
    sym: Atom('X' type=inline),
    span: Span {
        lo: BytePos(
            40,
        ),
        hi: BytePos(
            41,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement6.ts:2:26
  |
2 | for (var a = 1, b = 2 of X) {
  |                          ^

